kompose/bf-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.app: bf-demo
  name: bf-demo
  namespace: bf-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.app: bf-demo
  template:
    metadata:
      labels:
        io.app: bf-demo
    spec:
      containers:
        - env:
            - name: DB_URI
              value: mongodb://mongo
            - name: FAKE_DATA
              value: "True"
            - name: SECRET_KEY
              value: should-be-changed
          image: andrewthomaslee/bf-demo:n3pkzip20xr3s5vkzhqlnmhci29yflhi
          name: bf-demo
          ports:
            - containerPort: 7999
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 7999
          stdin: true
          tty: true
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.1"
              memory: "64Mi"
      restartPolicy: Always
