kompose/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.kompose.yml
    kompose.service.healthcheck.liveness.tcp_port: "27017"
    kompose.service.type: clusterip
    kompose.version: 1.37.0 (HEAD)
    kompose.volume.size: 5Gi
    kompose.volume.storage-class-name: longhorn
    kompose.volume.type: persistentVolumeClaim
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.kompose.yml
        kompose.service.healthcheck.liveness.tcp_port: "27017"
        kompose.service.type: clusterip
        kompose.version: 1.37.0 (HEAD)
        kompose.volume.size: 5Gi
        kompose.volume.storage-class-name: longhorn
        kompose.volume.type: persistentVolumeClaim
      labels:
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:8.0.13
          name: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      restartPolicy: Always
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
