kompose/bf-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: bf-demo
  name: bf-demo
  namespace: bf-demo
spec:
  ports:
    - name: "bf-demo"
      port: 7999
      targetPort: 7999
  selector:
    io.kompose.service: bf-demo
  type: ClusterIP
