kompose/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.app: mongo
  name: mongo
  namespace: bf-demo
spec:
  ports:
    - name: "mongo"
      port: 27017
      targetPort: 27017
  selector:
    io.app: mongo
  type: ClusterIP
