kompose/bf-demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bf-demo
  namespace: bf-demo
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: web
      namespace: traefik
  hostnames:
    - bf-demo.netsam.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bf-demo
          port: 7999
